[package]
name = "liescript"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
petgraph = "0.6"
log = "0.4"
lazy_static = "1.4"
pest = "2.5"
pest_derive = "2.5"

[dev-dependencies]
env_logger = "0.10"
